nginx_balancer-two_services/project_two/p2_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-two
spec:
  ports:
    - port: 8080
  selector:
    app: hello-world-two
