nginx_balancer-two_services/project_two/p2_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-two
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: "/whereami"
          pathType: Prefix
          backend:
            service:
              name: hello-world-two
              port:
                number: 8080
